--- a/2FET/Week12-CRUD-Project/package.json
+++ b/2FET/Week12-CRUD-Project/package.json
@@ -1,6 +1,15 @@
 {
+  "name": "week12-crud-project",
+  "version": "1.0.0",
+  "description": "",
+  "main": "script.js",
   "dependencies": {
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.0"
-  }
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
