--- a/3React/Week14-Props-State-Events-LifecycleMethods/week14-project/package.json
+++ b/3React/Week14-Props-State-Events-LifecycleMethods/week14-project/package.json
@@ -12,8 +12,12 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.0.9-0",
+    "react-code-copy-block": "^1.0.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^4.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
